--- a/app/i18n/locales/en.json
+++ b/app/i18n/locales/en.json
@@ -9,6 +9,13 @@
     "verifyProducts": "Verify Products",
     "signIn": "Sign In"
   },
+  "list":{
+    "title": "List",
+    "description": "List of products",
+    "empty":{
+      "manufacturer": "No products found for your company"
+    }
+  },
   "loading": "Loading...",
   "certifications": {
     "title": "Certifications",
@@ -84,7 +91,12 @@
       "loading":"Loading certifications...",
       "empty":{
         "title":"No certifications found",
-        "description":"No certifications found for your company"
+        "description":"No certifications found for your company",
+        "manufacturer":"No certifications found for your company",
+        "addButton":"Add Product"
+      },
+      "actions":{
+       "view":"View"
       },
       "table":{
         "document":"Document",
@@ -115,7 +127,8 @@
       }
     },
     "actions":{
-      "new":"New Certificate"
+      "new":"New Certificate",
+      "download":"Download"
     }
   },
   "pages": {           
