refactor: move password reset logic to useAuth hook for better code organization

--- a/app/i18n/locales/tr.json
+++ b/app/i18n/locales/tr.json
@@ -2995,6 +2995,12 @@
   "loading": "Yükleniyor...",
   "errorFetching": "Hata: Bilgiler alınamadı.",
   "auth": {
+    "success":{
+      "updatePassword":{
+        "title": "Şifre Güncellendi",
+        "description": "Şifreniz başarıyla güncellendi."
+      }
+    },
     "forgot-password":{
       "title": "Şifre Kurtarma",
       "pageTitle": "Şifremi Unuttum",
