--- a/app/i18n/locales/en.json
+++ b/app/i18n/locales/en.json
@@ -2401,6 +2401,12 @@
 }
   },
   "auth": {
+    "success":{
+     "updatePassword":{
+      "title": "Password Updated",
+      "description": "Your password has been updated successfully."
+     }
+    },
     "forgot-password": {
       "title": "Password Recovery",
       "pageTitle": "Forgot Password",
