feat: Implement comprehensive user management system with company-based isolation, invitation system, and role-based access control

--- a/app/i18n/locales/en.json
+++ b/app/i18n/locales/en.json
@@ -9,6 +9,11 @@
     "verifyProducts": "Verify Products",
     "signIn": "Sign In"
   },
+  "settings":{
+  "tabs":{
+    "users":"Users"
+  }
+  },
   "list":{
     "title": "List",
     "description": "List of products",
