Translation added for Pending Products and Recent Activities sections, including the time and New labels

--- a/app/i18n/locales/en.json
+++ b/app/i18n/locales/en.json
@@ -205,7 +205,7 @@
       "submitted": "Submitted",
       "status": {
         "pending": "Pending",
-        "review": "In Review",
+        "review": "Pending Review",
         "rejected": "Rejected"
       }
     },
