--- a/app/i18n/locales/en.json
+++ b/app/i18n/locales/en.json
@@ -68,7 +68,27 @@
   "changePassword":{
     "label":"Change Password",
     "description":"Change your password to secure your account",
-    "button":"Change Password"
+    "button":"Change Password",
+    "dialog": {
+      "title": "Change Password",
+      "description": "Enter your new password",
+      "newPassword": "New Password",
+      "newPasswordPlaceholder": "Enter your new password",
+      "confirmPassword": "Confirm Password",
+      "confirmPasswordPlaceholder": "Confirm your new password",
+      "cancel": "Cancel",
+      "change": "Change",
+      "changing": "Changing..."
+    },
+    "error": {
+      "title": "Error",
+      "mismatch": "Passwords do not match",
+      "generic": "An error occurred while changing password"
+    },
+    "success": {
+      "title": "Success",
+      "description": "Your password has been changed successfully"
+    }
   }
   },
   "company":{
