--- a/app/i18n/locales/en.json
+++ b/app/i18n/locales/en.json
@@ -13,6 +13,53 @@
   "title":"Settings",
   "description":"Manage your account settings and preferences",
   "saveChanges":"Save Changes",
+  "users":{
+    "title":"Users",
+    "description":"Manage your users and invite new users",
+    "invite":"Invite New User",
+    "existing":"Existing Users",
+    "loading":"Loading users...",
+    "no_users":"There are no users yet",
+    "no_users_description":"You can invite new users to your company by using the 'Invite New User' button.",
+    "roles":{
+      "admin":"Admin",
+      "company_admin":"Company Admin",
+      "manufacturer":"Manufacturer",
+      "user":"User"
+    },
+    "delete":{
+      "title":"Delete User",
+      "description":"Are you sure you want to delete this user?",
+      "cancel":"Cancel",
+      "delete":"Delete"
+    },
+    "invites":{
+      "description":"Fill out the form below to invite a new user to your company.",
+      "full_name":"Full Name",
+      "full_name_placeholder":"Enter full name",
+      "email":"Email",
+      "email_placeholder":"Enter email",
+      "role":"Role",
+      "send":"Send",
+      "sending":"Sending...",
+      "pending":"Pending Invites",
+      "pending_status":"Pending",
+      "no_pending":"No pending invites",
+      "no_pending_description":"You can invite new users to your company by using the 'Invite New User' button.", 
+      "error":{
+        "title":"Error",
+        "description":"Please fill all fields"
+      },
+      "success":{
+        "title":"Success",
+        "description":"Invite sent successfully"
+      },
+      "roles":{
+        "user":"User",
+        "company_admin":"Company Admin"
+      }
+    }
+  },
   "notifications":{
     "title":"Notifications",
     "email":{
