enhance document list and details interaction

--- a/app/i18n/locales/en.json
+++ b/app/i18n/locales/en.json
@@ -2319,6 +2319,15 @@
         "view": "View",
         "reupload": "Reupload"
       }
+    },
+    "detail": {
+      "title": "Document Details",
+      "type": "Document Type",
+      "status": "Status",
+      "createdAt": "Created At",
+      "updatedAt": "Updated At",
+      "view": "View",
+      "download": "Download"
     }
   },
   "admin": {
