--- a/app/i18n/locales/tr.json
+++ b/app/i18n/locales/tr.json
@@ -398,6 +398,15 @@
         "delete": "Sil",
         "upload": "Yükle",
         "reupload": "Yeniden Yükle"
+      },
+      "detail": {
+        "title": "Belge Detayları",
+        "type": "Belge Tipi",
+        "status": "Durum",
+        "createdAt": "Oluşturulma Tarihi",
+        "updatedAt": "Güncellenme Tarihi",
+        "view": "Görüntüle",
+        "download": "İndir"
       }
     },
     "products": {
@@ -3495,6 +3504,15 @@
         "title": "Belge Bulunamadı",
         "description": "Aradığınız belge bulunamadı."
       }
+    },
+    "detail": {
+      "title": "Belge Detayları",
+      "type": "Belge Tipi",
+      "status": "Durum",
+      "createdAt": "Oluşturulma Tarihi",
+      "updatedAt": "Güncellenme Tarihi",
+      "view": "Görüntüle",
+      "download": "İndir"
     }
   }
 } 
