--- a/app/i18n/locales/en.json
+++ b/app/i18n/locales/en.json
@@ -2328,6 +2328,15 @@
       "updatedAt": "Updated At",
       "view": "View",
       "download": "Download"
+    },
+    "upload": {
+      "title": "Upload Document",
+      "description": "Upload a new document",
+      "typeLabel": "Document Type",
+      "typePlaceholder": "Select document type",
+      "fileLabel": "File",
+      "filePlaceholder": "Select or drag a file here",
+      "submit": "Upload"
     }
   },
   "admin": {
